create init_hbt.sql configured .properties to init db and fill automatic